# MapReduce

planner/: Cargo.toml  index.html
planner/src/: load_tests.rs  main.rs  unit_tests.rs
text_files/: 1.txt  2.txt  3.txt
worker/: Cargo.toml
worker/src/: main.rs  unit_tests.rs
